objects/zqu__Quote__c.object
<CustomObject>
    <fields>
        <fullName>zqu__SpecificRampFrequency__c</fullName>
        <description>Customizes how often products on the Quote should be ramped. This field is required if you set Ramp Frequency to &apos;Specific Months&apos;</description>
        <inlineHelpText>Customizes how often products on the Quote should be ramped. This field is required if you set Ramp Frequency to &apos;Specific Months&apos;</inlineHelpText>
        <label>Specific Ramp Frequency</label>
        <precision>12</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>zqu__StartDate__c</fullName>
        <description>The Date that the Quote Starts.</description>
        <inlineHelpText>The Date that the Quote Starts.</inlineHelpText>
        <label>Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>zqu__Status__c</fullName>
        <description>The Status of the Quote.</description>
        <inlineHelpText>The Status of the Quote.</inlineHelpText>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>New</fullName>
                    <default>true</default>
                    <label>New</label>
                </value>
                <value>
                    <fullName>MultiQuote Error</fullName>
                </value>
                <value>
                    <fullName>Sent to Z-Billing</fullName>
                </value>
                <value>
                    <fullName>Approved</fullName>
                </value>
                <value>
                    <fullName>Rejected</fullName>
                </value>
                <value>
                    <fullName>Created</fullName>
                </value>
                <value>
                    <fullName>Closed</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>zqu__StoreProductsJobId__c</fullName>
        <description>The job id for storing original products for Amendment and Renewal.</description>
        <label>Store Products Job Id</label>
        <length>32</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>zqu__SubscriptionName__c</fullName>
        <description>The name of the subscription.</description>
        <label>Subscription Name (Deprecated)</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>zqu__SubscriptionTermEndDate__c</fullName>
        <description>Only for Amendment quotes, contains the term end date of the base subscription</description>
        <inlineHelpText>The term end date of the subscription is amendment on</inlineHelpText>
        <label>Subscription Term End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>zqu__SubscriptionTermStartDate__c</fullName>
        <description>The term start date of the subscription is amendment on, only used for amendment Quote</description>
        <inlineHelpText>The term start date of the subscription is amendment on</inlineHelpText>
        <label>Subscription Term Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>zqu__SubscriptionType__c</fullName>
        <label>Subscription Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>New Subscription</fullName>
                </value>
                <value>
                    <fullName>Amend Subscription</fullName>
                </value>
                <value>
                    <fullName>Renew Subscription</fullName>
                </value>
                <value>
                    <fullName>Cancel Subscription</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>zqu__SubscriptionVersion__c</fullName>
        <description>This is the version of the subscription</description>
        <label>Subscription Version</label>
        <precision>5</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>zqu__Subscription_Name__c</fullName>
        <formula>IF( zqu__Hidden_Subscription_Name__c != &apos;&apos;,  zqu__Hidden_Subscription_Name__c ,  zqu__SubscriptionName__c )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Subscription Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>zqu__Subscription_Term_Type__c</fullName>
        <inlineHelpText>Subscription Term Type determines whether its Termed or Evergreen. If Evergreen is chosen, then Initial Term and Renewal Term will be set to 0 and Auto Renew will be unchecked. Also, blank value means Quote is created with Termed Subscription Type.</inlineHelpText>
        <label>Subscription Term Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Termed</fullName>
                </value>
                <value>
                    <fullName>Evergreen</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>zqu__TCBTax__c</fullName>
        <description>Tax on Total Contracted Billing returned from previewing the quote in Zuora</description>
        <inlineHelpText>Tax on Total Contracted Billing returned from previewing the quote in Zuora</inlineHelpText>
        <label>TCB Tax</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>zqu__TCV__c</fullName>
        <label>TCV (Deprecated)</label>
        <summarizedField>zqu__QuoteCharge__c.zqu__TCVForRollup__c</summarizedField>
        <summaryForeignKey>zqu__QuoteCharge__c.zqu__Quote__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>zqu__TaxExemptEffectiveDate__c</fullName>
        <label>Tax Exempt Effective Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>zqu__TaxExemptExpirationDate__c</fullName>
        <label>Tax Exempt Expiration Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>zqu__Tax_Exempt_Description__c</fullName>
        <label>Description</label>
        <length>500</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>zqu__Tax_Exempt__c</fullName>
        <label>Tax Exempt</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
                <value>
                    <fullName>Pending Verification</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>zqu__Tax__c</fullName>
        <description>The amount of Tax for the Quote.</description>
        <inlineHelpText>The amount of Tax for the Quote.</inlineHelpText>
        <label>Tax(Deprecated)</label>
        <precision>8</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>zqu__TermStartDate__c</fullName>
        <label>Term Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>zqu__Terms__c</fullName>
        <description>Special Terms and Notes for the Quote.</description>
        <inlineHelpText>Special Terms and Notes for the Quote.</inlineHelpText>
        <label>Special Terms and Notes</label>
        <length>1000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>zqu__Total__c</fullName>
        <label>Total(Deprecated)</label>
        <summarizedField>zqu__QuoteCharge__c.zqu__Total__c</summarizedField>
        <summaryForeignKey>zqu__QuoteCharge__c.zqu__Quote__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>zqu__VAT_ID__c</fullName>
        <label>VAT ID</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>zqu__ValidUntil__c</fullName>
        <description>The Date that the Quote is Valid until.</description>
        <inlineHelpText>The Date that the Quote is Valid until.</inlineHelpText>
        <label>Valid Until</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>zqu__ZuoraAccountID__c</fullName>
        <label>Zuora Account ID</label>
        <length>32</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>zqu__ZuoraConfig__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Zuora Config</label>
        <referenceTo>zqu__ZuoraConfig__c</referenceTo>
        <relationshipLabel>Quote</relationshipLabel>
        <relationshipName>Quote</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>zqu__ZuoraEntityId__c</fullName>
        <label>Zuora Entity ID</label>
        <length>32</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>zqu__ZuoraInvoiceNumber__c</fullName>
        <label>Zuora Invoice Number</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>zqu__ZuoraParentBillingAccountId__c</fullName>
        <label>Zuora Parent Billing Account Id</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>zqu__ZuoraParentBillingAccountName__c</fullName>
        <label>Zuora Parent Billing Account Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>zqu__ZuoraPaymentID__c</fullName>
        <label>Zuora Payment Id</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>zqu__ZuoraPaymentNumber__c</fullName>
        <label>Zuora Payment Number</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>zqu__ZuoraSubscriptionID__c</fullName>
        <caseSensitive>true</caseSensitive>
        <externalId>true</externalId>
        <label>Zuora Subscription ID</label>
        <length>32</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>zqu__ZuoraSubscriptionNumber__c</fullName>
        <label>Zuora Subscription Number</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>zqu__Zuora_Account_Number__c</fullName>
        <label>Zuora Account Number</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>Quote</label>
    <listViews>
        <fullName>zqu__All_Quotes</fullName>
        <columns>NAME</columns>
        <columns>zqu__Number__c</columns>
        <columns>zqu__Opportunity__c</columns>
        <columns>zqu__SubscriptionType__c</columns>
        <columns>zqu__Status__c</columns>
        <columns>zqu__StartDate__c</columns>
        <columns>zqu__ValidUntil__c</columns>
        <columns>Bill2Contact__c</columns>
        <columns>Sold2Contact__c</columns>
        <columns>zqu__Subscription_Term_Type__c</columns>
        <columns>zqu__InitialTerm__c</columns>
        <columns>zqu__RenewalTerm__c</columns>
        <columns>zqu__AutoRenew__c</columns>
        <columns>LAST_UPDATE</columns>
        <filterScope>Everything</filterScope>
        <label>All Quotes</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>zqu__Amendment_Quotes</fullName>
        <columns>NAME</columns>
        <columns>zqu__Number__c</columns>
        <columns>zqu__Opportunity__c</columns>
        <columns>zqu__Status__c</columns>
        <columns>zqu__StartDate__c</columns>
        <columns>Bill2Contact__c</columns>
        <columns>Sold2Contact__c</columns>
        <columns>zqu__Subscription_Term_Type__c</columns>
        <columns>zqu__Subscription_Name__c</columns>
        <columns>zqu__SubscriptionVersion__c</columns>
        <columns>zqu__InitialTerm__c</columns>
        <columns>zqu__RenewalTerm__c</columns>
        <columns>LAST_UPDATE</columns>
        <columns>zqu__Previewed_Delta_MRR__c</columns>
        <columns>zqu__Previewed_Delta_TCV__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>zqu__SubscriptionType__c</field>
            <operation>equals</operation>
            <value>Amend Subscription</value>
        </filters>
        <label>Amendment Quotes</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>zqu__Cancellation_Quotes</fullName>
        <columns>NAME</columns>
        <columns>zqu__Number__c</columns>
        <columns>zqu__Opportunity__c</columns>
        <columns>zqu__Status__c</columns>
        <columns>zqu__StartDate__c</columns>
        <columns>zqu__CancellationDate__c</columns>
        <columns>zqu__CancellationEffectiveDate__c</columns>
        <columns>zqu__Subscription_Term_Type__c</columns>
        <columns>zqu__Subscription_Name__c</columns>
        <columns>zqu__SubscriptionVersion__c</columns>
        <columns>Bill2Contact__c</columns>
        <columns>Sold2Contact__c</columns>
        <columns>LAST_UPDATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>zqu__SubscriptionType__c</field>
            <operation>equals</operation>
            <value>Cancel Subscription</value>
        </filters>
        <label>Cancellation Quotes</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>zqu__New_Subscription_Quotes</fullName>
        <columns>NAME</columns>
        <columns>zqu__Number__c</columns>
        <columns>zqu__Opportunity__c</columns>
        <columns>zqu__Status__c</columns>
        <columns>zqu__StartDate__c</columns>
        <columns>Bill2Contact__c</columns>
        <columns>Sold2Contact__c</columns>
        <columns>zqu__Subscription_Term_Type__c</columns>
        <columns>zqu__PaymentTerm__c</columns>
        <columns>zqu__PaymentMethod__c</columns>
        <columns>zqu__Previewed_MRR__c</columns>
        <columns>zqu__Previewed_TCV__c</columns>
        <columns>LAST_UPDATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>zqu__SubscriptionType__c</field>
            <operation>equals</operation>
            <value>New Subscription</value>
        </filters>
        <label>New Subscription Quotes</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>zqu__Renewal_Quotes</fullName>
        <columns>NAME</columns>
        <columns>zqu__Number__c</columns>
        <columns>zqu__Status__c</columns>
        <columns>zqu__StartDate__c</columns>
        <columns>zqu__ValidUntil__c</columns>
        <columns>Bill2Contact__c</columns>
        <columns>Sold2Contact__c</columns>
        <columns>zqu__Subscription_Term_Type__c</columns>
        <columns>zqu__Subscription_Name__c</columns>
        <columns>zqu__SubscriptionVersion__c</columns>
        <columns>zqu__InitialTerm__c</columns>
        <columns>zqu__RenewalTerm__c</columns>
        <columns>zqu__Previewed_Delta_MRR__c</columns>
        <columns>zqu__Previewed_Delta_TCV__c</columns>
        <columns>LAST_UPDATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>zqu__SubscriptionType__c</field>
            <operation>equals</operation>
            <value>Renew Subscription</value>
        </filters>
        <label>Renewal Quotes</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <label>Quote Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Quotes</pluralLabel>
    <recordTypes>
        <fullName>zqu__Amendment</fullName>
        <active>true</active>
        <description>Record Type for Amendment Quote, assigned with Amendment Page Layout</description>
        <label>Amendment</label>
    </recordTypes>
    <recordTypes>
        <fullName>zqu__Amendment_ReadOnly</fullName>
        <active>true</active>
        <description>Record Type for amend Subscription Quote after sent to Zuora, assigned with Amendment Read Only Page Layout</description>
        <label>Amendment ReadOnly</label>
    </recordTypes>
    <recordTypes>
        <fullName>zqu__Cancellation</fullName>
        <active>true</active>
        <description>Record Type for Cancellation Quote, assigned with Cancellation Page Layout</description>
        <label>Cancellation</label>
    </recordTypes>
    <recordTypes>
        <fullName>zqu__Cancellation_ReadOnly</fullName>
        <active>true</active>
        <description>Record Type for Cancellation Quote, assigned with Cancellation Page Layout</description>
        <label>Cancellation ReadOnly</label>
    </recordTypes>
    <recordTypes>
        <fullName>zqu__Default</fullName>
        <active>true</active>
        <description>Record Type for Quote Default, assigned with Quote Default Page Layout</description>
        <label>Default</label>
    </recordTypes>
    <recordTypes>
        <fullName>zqu__ReadOnly</fullName>
        <active>true</active>
        <description>Record Type for New Subscription Quote after sent to Zuora, assigned with Quote Read Only Page Layout</description>
        <label>ReadOnly</label>
    </recordTypes>
    <recordTypes>
        <fullName>zqu__Renewal</fullName>
        <active>true</active>
        <description>Record Type for Quote Renewal, assigned with Renewal Page Layout</description>
        <label>Renewal</label>
    </recordTypes>
    <recordTypes>
        <fullName>zqu__Renewal_ReadOnly</fullName>
        <active>true</active>
        <description>Record Type for renew subscription Quote after sent to Zuora, assigned with Renewal Read Only Page Layout</description>
        <label>Renewal ReadOnly</label>
    </recordTypes>
    <sharingModel>ReadWrite</sharingModel>
    <validationRules>
        <fullName>AssetRequiredForDNA</fullName>
        <active>true</active>
        <description>Asset is required for DNA Entity</description>
        <errorConditionFormula>NOT($User.BypassVR__c) &amp;&amp; 
TEXT(Entity__c) = &apos;DNA&apos; &amp;&amp; 
ISBLANK(Asset__c) &amp;&amp; 
RecordType.DeveloperName = &apos;Default&apos;</errorConditionFormula>
        <errorDisplayField>zqu__Account__c</errorDisplayField>
        <errorMessage>You must select an Asset for DNA Entity!</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>AssetwithNoProductOrNoSN</fullName>
        <active>true</active>
        <description>For DNA, Asset represents a Trip Unit. Trip Units must have a Product (SKU) and a Serial Number.</description>
        <errorConditionFormula>NOT($User.BypassVR__c) &amp;&amp; 
TEXT(Entity__c) = &apos;DNA&apos; &amp;&amp; 
(ISBLANK(Asset_SKU__c) || ISBLANK(Asset__r.SVMXC__Serial_Lot_Number__c)) &amp;&amp; 
RecordType.DeveloperName = &apos;Default&apos;</errorConditionFormula>
        <errorMessage>Selected Asset must have a SKU (Product) and a Serial/Lot Number.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>EntityNotEditable</fullName>
        <active>true</active>
        <errorConditionFormula>NOT($User.BypassVR__c) &amp;&amp; NOT(ISNEW()) &amp;&amp;
AND(ISPICKVAL(zqu__SubscriptionType__c, &apos;New Subscription&apos;), NOT(ISBLANK(PRIORVALUE(Entity__c))), ISCHANGED(Entity__c))</errorConditionFormula>
        <errorMessage>Entity: The field is not editable.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>GateManagerRequiredForHMI</fullName>
        <active>true</active>
        <description>Gate Manager is required for HMI Entity</description>
        <errorConditionFormula>NOT($User.BypassVR__c) &amp;&amp;
RecordType.DeveloperName = &apos;Default&apos; &amp;&amp;
TEXT(Entity__c) = &apos;HMI&apos; &amp;&amp;
ISBLANK(ZHMIGateManager__c)</errorConditionFormula>
        <errorMessage>You must select a Gate Manager for this Entity!</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>NbMWSiteRequiredForSOL</fullName>
        <active>true</active>
        <description>Fields Nb MW and Solar site required for SOL</description>
        <errorConditionFormula>AND( ISPICKVAL( Entity__c , &quot;SOL&quot;) ,  ISBLANK( Nb_MW__c ),  ISPICKVAL(zqu__SubscriptionType__c, &quot;New Subscription&quot;) )</errorConditionFormula>
        <errorMessage>Please enter a Nb of MW and a Solar site description</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>NoParentAccount</fullName>
        <active>true</active>
        <description>A OneTime or MultiTime Quote cannot have a Parent Quote</description>
        <errorConditionFormula>NOT($User.BypassVR__c) &amp;&amp; 
AND(NOT(ISBLANK(ReferenceQuote__c )),
    OR(ISPICKVAL(Type__c, &apos;OneTime&apos;), ISPICKVAL(Type__c, &apos;MultiTime&apos;)
      )
   )</errorConditionFormula>
        <errorMessage>A OneTime or MultiTime Quote cannot have a Parent Quote</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>QtyConsumeAndRefQuotePopulatedForFIO</fullName>
        <active>true</active>
        <description>FIO and both Quantity Consumed and Reference Quote are populated</description>
        <errorConditionFormula>NOT($User.BypassVR__c)                                 &amp;&amp;
ISPICKVAL(zqu__SubscriptionType__c,&apos;New Subscription&apos;) &amp;&amp;
ISPICKVAL(Entity__c, &apos;FIO&apos;)                            &amp;&amp;
((ISBLANK(QtyConsume__c) &amp;&amp; NOT(ISBLANK(ReferenceQuote__c))) || (NOT(ISBLANK(QtyConsume__c)) &amp;&amp; ISBLANK(ReferenceQuote__c)))</errorConditionFormula>
        <errorMessage>Both Quantity Consumed and Reference Quote must be populated when you want to generate multiple Subscriptions.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>QtyConsumeCheckForFIO</fullName>
        <active>true</active>
        <description>FIO and Quantity Consumed is greater than the Open Quantity of the Reference Quote OR Quantity Consumed is greater than 100</description>
        <errorConditionFormula>NOT($User.BypassVR__c)                                	  	   &amp;&amp;
ISPICKVAL(zqu__SubscriptionType__c,&apos;New Subscription&apos;) 		   &amp;&amp;
ISPICKVAL(Entity__c, &apos;FIO&apos;)                            		   &amp;&amp;
NOT(ISPICKVAL(zqu__Status__c, &apos;MultiQuote Error&apos;))             &amp;&amp; 
NOT(ISPICKVAL(zqu__Status__c,&apos;Sent to Z-Billing&apos;))    		   &amp;&amp; 
((QtyConsume__c &gt; ReferenceQuote__r.OpenQuantity__c) || (QtyConsume__c &gt; 100))</errorConditionFormula>
        <errorMessage>Ensure that Quantity Consumed is less than 100 and less or equal to the Open Quantity of the Reference Quote.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>QtyConsumePopulatedForNotFIO</fullName>
        <active>true</active>
        <description>Entity &lt;&gt; FIO and Quantity Consumed is populated</description>
        <errorConditionFormula>NOT($User.BypassVR__c)                                 &amp;&amp;
ISPICKVAL(zqu__SubscriptionType__c,&apos;New Subscription&apos;) &amp;&amp;
NOT(ISPICKVAL(Entity__c, &apos;FIO&apos;))					   &amp;&amp;
NOT(ISBLANK(QtyConsume__c))</errorConditionFormula>
        <errorMessage>The field Quantity Consumed must be empty for this Entity.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>SOLModifyNbMWAfterApprovalCheck</fullName>
        <active>true</active>
        <errorConditionFormula>NOT($User.BypassVR__c) &amp;&amp;
TEXT(Entity__c) = &apos;SOL&apos; &amp;&amp;
NOT(ISBLANK(PRIORVALUE(Nb_MW__c))) &amp;&amp;
ISCHANGED(Nb_MW__c)</errorConditionFormula>
        <errorMessage>You can&apos;t change &apos;Nb MW&apos; once set, because there is an impact on price!</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>SolarSiteANDSolarSiteDescRequiredForSOL</fullName>
        <active>true</active>
        <description>Fields Solar site and Solar site are required for SOL</description>
        <errorConditionFormula>NOT($User.BypassVR__c) &amp;&amp;
AND( ISPICKVAL( Entity__c , &quot;SOL&quot;) , OR(ISBLANK( Solar_Site__c ), ISBLANK( Solar_Site_Desc__c )), ISPICKVAL(zqu__SubscriptionType__c, &quot;New Subscription&quot;) )</errorConditionFormula>
        <errorDisplayField>zqu__Account__c</errorDisplayField>
        <errorMessage>Please enter a Solar site and a Solar site description</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>SoldToContactRequiredForPDF</fullName>
        <active>true</active>
        <description>&quot;Contact Name for the Quote&quot; field is required for SOL.</description>
        <errorConditionFormula>NOT($User.BypassVR__c) &amp;&amp;
$Profile.Name  &lt;&gt; &apos;SE - Interface - Z360&apos; &amp;&amp;
TEXT(zqu__SubscriptionType__c)  = &apos;New Subscription&apos; &amp;&amp;
TEXT(Entity__c) = &apos;SOL&apos; &amp;&amp;
ISBLANK(QuoteContactName__c)</errorConditionFormula>
        <errorMessage>Please select the Contact that is used to define address in the Quote.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>SubscriptionTermStartDateNOTChanged</fullName>
        <active>true</active>
        <errorConditionFormula>NOT($User.BypassVR__c) &amp;&amp;
($RecordType.DeveloperName = &apos;Amendment&apos;)
&amp;&amp;
(VLOOKUP($ObjectType.Zuora__Subscription__c.Fields.Zuora__TermStartDate__c,
                         $ObjectType.Zuora__Subscription__c.Fields.Name,
                         zqu__Subscription_Name__c) &lt;&gt; zqu__SubscriptionTermStartDate__c)</errorConditionFormula>
        <errorMessage>You cannot change the Subscription Term Start Date for an Amendment!</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>ValidationProvisionDate</fullName>
        <active>true</active>
        <errorConditionFormula>AND(
    NOT($User.BypassVR__c),
    RecordType.DeveloperName = &apos;Default&apos;, 
    NOT(ISNULL (Z_ProvisionDate__c)),
    zqu__StartDate__c  &lt; Z_ProvisionDate__c
)</errorConditionFormula>
        <errorMessage>The Provision Date must be before or equal to the Start Date</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>zqu__ValidateCustomerAcceptanceDate</fullName>
        <active>true</active>
        <description>Validate whether Customer Acceptance Date is equal or after Service Activation Date</description>
        <errorConditionFormula>AND
     ( NOT ( ISNULL (   zqu__Customer_Acceptance_Date__c   ) ),
       OR
           (
             zqu__Customer_Acceptance_Date__c &lt;   zqu__Service_Activation_Date__c,
             zqu__Customer_Acceptance_Date__c &lt;    zqu__StartDate__c
           )
     )</errorConditionFormula>
        <errorDisplayField>zqu__Customer_Acceptance_Date__c</errorDisplayField>
        <errorMessage>Customer Acceptance Date cannot be before Service Activation Date or Start Date</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>zqu__ValidateServiceActivationDate</fullName>
        <active>true</active>
        <description>Validate whether Service Activation Date is equal or after Start Date</description>
        <errorConditionFormula>AND
     ( NOT ( ISNULL (  zqu__Service_Activation_Date__c  ) ),
       zqu__Service_Activation_Date__c &lt;  zqu__StartDate__c
     )</errorConditionFormula>
        <errorDisplayField>zqu__Service_Activation_Date__c</errorDisplayField>
        <errorMessage>Service Activation Date cannot be before Start Date</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>zqu__ValidateSubscriptionTermedType</fullName>
        <active>true</active>
        <description>[Deprecated]</description>
        <errorConditionFormula>false</errorConditionFormula>
        <errorDisplayField>zqu__Subscription_Term_Type__c</errorDisplayField>
        <errorMessage>[Deprecated]</errorMessage>
    </validationRules>
</CustomObject>